fixed monster alignment during battle

--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ footer span {
   }
 
   .monster {
-    padding: 35% 2%;
+    padding: 30% 2%;
     justify-content: space-between;
   }
 
